# applib

./: CLA.md  CLAUDE.md  CONTRIBUTORS  Cargo.toml  LICENSE  README.md
docs/: lib.md  prelude.md
docs/1_state/: binding.md  mod.md  state.md
docs/2_components/: alert.md  badge.md  button.md  canvas.md  checkbox.md  color_picker.md  color_view.md  context_menu.md  date_picker.md  disclosure_group.md  divider.md  empty_state.md  empty_view.md  form.md  group_box.md  hstack.md  icon_button.md  image.md  label.md  lazy_hgrid.md  lazy_hstack.md  lazy_vgrid.md  lazy_vstack.md  link.md  list.md  list_item.md  menu.md  navigation_split_view.md  panel.md  picker.md  popover.md  progress_view.md  radio_group.md  scroll_view.md  section.md  secure_field.md  sheet.md  sidebar.md  sidebar_item.md  slider.md  (+16 more)
docs/3_utils/: debounce.md
docs/assets/: showcase.webm
examples/: showcase.rs
src/: lib.rs  prelude.rs
src/components/: alert.rs  badge.rs  button.rs  canvas.rs  checkbox.rs  color_picker.rs  color_view.rs  context_menu.rs  date_picker.rs  disclosure_group.rs  divider.rs  empty_state.rs  empty_view.rs  form.rs  group_box.rs  hstack.rs  icon_button.rs  image.rs  label.rs  lazy_hgrid.rs  lazy_hstack.rs  lazy_vgrid.rs  lazy_vstack.rs  link.rs  list.rs  list_item.rs  menu.rs  mod.rs  navigation_split_view.rs  panel.rs  picker.rs  popover.rs  progress_view.rs  radio_group.rs  scroll_view.rs  section.rs  secure_field.rs  sheet.rs  sidebar.rs  sidebar_item.rs  (+17 more)
src/state/: binding.rs  mod.rs  state.rs
src/utils/: debounce.rs  mod.rs
